{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 87,
  "lineage": "671b005a-5174-163f-60ac-ee0b70943742",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264066970:loadbalancer/app/app-lb/276cfcb7f1990113",
            "arn_suffix": "app/app-lb/276cfcb7f1990113",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-558711283.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264066970:loadbalancer/app/app-lb/276cfcb7f1990113",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a6c0b365cf573c3b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a3b3e99ff3bef98e"
              },
              {
                "subnet_id": "subnet-0d8f78d44b205c46e"
              },
              {
                "subnet_id": "subnet-0e5632003d78e44ad"
              }
            ],
            "subnets": [
              "subnet-0a3b3e99ff3bef98e",
              "subnet-0d8f78d44b205c46e",
              "subnet-0e5632003d78e44ad"
            ],
            "vpc_id": "vpc-0cf9541fd9ba45838",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.lb_sg_group.aws_security_group.this",
            "module.lb_sg_group.aws_security_group.this_name_prefix",
            "module.vpc_ecs.aws_subnet.public",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "reverse_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264066970:listener/app/app-lb/276cfcb7f1990113/e7463d5414f2ba3a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:058264066970:targetgroup/do4m-target-group/10eaab3f51488540",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264066970:listener/app/app-lb/276cfcb7f1990113/e7463d5414f2ba3a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:058264066970:loadbalancer/app/app-lb/276cfcb7f1990113",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.default",
            "aws_lb_target_group.reverse_proxy",
            "module.lb_sg_group.aws_security_group.this",
            "module.lb_sg_group.aws_security_group.this_name_prefix",
            "module.vpc_ecs.aws_subnet.public",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "reverse_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058264066970:targetgroup/do4m-target-group/10eaab3f51488540",
            "arn_suffix": "targetgroup/do4m-target-group/10eaab3f51488540",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:058264066970:targetgroup/do4m-target-group/10eaab3f51488540",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:058264066970:loadbalancer/app/app-lb/276cfcb7f1990113"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "do4m-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "dependencies": [
            "module.vpc_ecs.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.cw_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:vpc-endpoint/vpce-07ba35439e0750f26",
            "dns_entry": [
              {
                "dns_name": "vpce-07ba35439e0750f26-nlok2p27.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07ba35439e0750f26-nlok2p27-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03092781HIX17MKGQ8NB"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z04164432Q1LURV5V5SHO"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07ba35439e0750f26",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0c942ede64568a9d9"
            ],
            "owner_id": "058264066970",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-005aadcf97f0a7b97"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.246",
                "subnet_id": "subnet-0d34ecef1bbb6b43e"
              }
            ],
            "subnet_ids": [
              "subnet-0d34ecef1bbb6b43e"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "dependencies": [
            "data.aws_region.current",
            "module.endpoint_sg.aws_security_group.this",
            "module.endpoint_sg.aws_security_group.this_name_prefix",
            "module.vpc_ecs.aws_subnet.private",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.docker_ec2_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:security-group/sg-029fc013d93a6771a",
            "description": "Security group for docker ec2 that permit all traffic in outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic in outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029fc013d93a6771a",
            "ingress": [],
            "name": "secgrp-docker-ec2-20250308135254042100000007",
            "name_prefix": "secgrp-docker-ec2-",
            "owner_id": "058264066970",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "secgrp-docker-ec2"
            },
            "tags_all": {
              "Name": "secgrp-docker-ec2"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ecs.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.docker_ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All traffic in outbound",
            "from_port": 0,
            "id": "sgrule-3822974732",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-029fc013d93a6771a",
            "security_group_rule_id": "sgr-0d51cdb52d661240c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.docker_ec2_sg.aws_security_group.this",
            "module.docker_ec2_sg.aws_security_group.this_name_prefix",
            "module.vpc_ecs.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecr_api_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:vpc-endpoint/vpce-0a2ff17486070a83a",
            "dns_entry": [
              {
                "dns_name": "vpce-0a2ff17486070a83a-4rxwhbxe.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a2ff17486070a83a-4rxwhbxe-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03111533OWHLV6XDSGEW"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z02929652F7NVGMC4UGN5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a2ff17486070a83a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-017f7400dbc721a29"
            ],
            "owner_id": "058264066970",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-005aadcf97f0a7b97"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.76",
                "subnet_id": "subnet-0d34ecef1bbb6b43e"
              }
            ],
            "subnet_ids": [
              "subnet-0d34ecef1bbb6b43e"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "dependencies": [
            "data.aws_region.current",
            "module.endpoint_sg.aws_security_group.this",
            "module.endpoint_sg.aws_security_group.this_name_prefix",
            "module.vpc_ecs.aws_subnet.private",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecr_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:vpc-endpoint/vpce-0575a6854ae903a77",
            "dns_entry": [
              {
                "dns_name": "vpce-0575a6854ae903a77-297xq3p6.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0575a6854ae903a77-297xq3p6-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z058296332G9QVAVUJFZ9"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z058296332G9QVAVUJFZ9"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z0582918CG8GEHNWJ98P"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z0582918CG8GEHNWJ98P"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0575a6854ae903a77",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07af50c7ed1f02842"
            ],
            "owner_id": "058264066970",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-005aadcf97f0a7b97"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.175",
                "subnet_id": "subnet-0d34ecef1bbb6b43e"
              }
            ],
            "subnet_ids": [
              "subnet-0d34ecef1bbb6b43e"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "dependencies": [
            "data.aws_region.current",
            "module.endpoint_sg.aws_security_group.this",
            "module.endpoint_sg.aws_security_group.this_name_prefix",
            "module.vpc_ecs.aws_subnet.private",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_rest_api_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:security-group/sg-05310ed7294a7a605",
            "description": "Security group for ecs that permit access from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic in HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-05310ed7294a7a605",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port 5000 traffic",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "secgrp-ecs_rest_api_sg-20250308135249277100000006",
            "name_prefix": "secgrp-ecs_rest_api_sg-",
            "owner_id": "058264066970",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "secgrp-ecs_rest_api_sg"
            },
            "tags_all": {
              "Name": "secgrp-ecs_rest_api_sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ecs.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_rest_api_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound traffic in HTTPS",
            "from_port": 443,
            "id": "sgrule-2696007648",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05310ed7294a7a605",
            "security_group_rule_id": "sgr-0dc674fdb41fcbd76",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_rest_api_sg.aws_security_group.this",
            "module.ecs_rest_api_sg.aws_security_group.this_name_prefix",
            "module.vpc_ecs.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_rest_api_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Port 5000 traffic",
            "from_port": 5000,
            "id": "sgrule-3475749547",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05310ed7294a7a605",
            "security_group_rule_id": "sgr-0c64188de2694d114",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_rest_api_sg.aws_security_group.this",
            "module.ecs_rest_api_sg.aws_security_group.this_name_prefix",
            "module.vpc_ecs.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.endpoint_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:security-group/sg-005aadcf97f0a7b97",
            "description": "Security group for endpoint that permit access from VPC cidr",
            "egress": [],
            "id": "sg-005aadcf97f0a7b97",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow Inbound traffic in HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "secgrp-endpoint_sg-2025030813525868980000000c",
            "name_prefix": "secgrp-endpoint_sg-",
            "owner_id": "058264066970",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "secgrp-endpoint_sg"
            },
            "tags_all": {
              "Name": "secgrp-endpoint_sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ecs.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.endpoint_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Allow Inbound traffic in HTTPS",
            "from_port": 443,
            "id": "sgrule-1985610817",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-005aadcf97f0a7b97",
            "security_group_rule_id": "sgr-073d4c04e3c803ef5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.endpoint_sg.aws_security_group.this",
            "module.endpoint_sg.aws_security_group.this_name_prefix",
            "module.vpc_ecs.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lb_sg_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:security-group/sg-0a6c0b365cf573c3b",
            "description": "Security group for alb that permit all trafiic in 443",
            "egress": [],
            "id": "sg-0a6c0b365cf573c3b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "secgrp-elb-2025030813525623370000000b",
            "name_prefix": "secgrp-elb-",
            "owner_id": "058264066970",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "secgrp-elb"
            },
            "tags_all": {
              "Name": "secgrp-elb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ecs.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb_sg_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-4219905162",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a6c0b365cf573c3b",
            "security_group_rule_id": "sgr-0cd50a501aca7eb1d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_sg_group.aws_security_group.this",
            "module.lb_sg_group.aws_security_group.this_name_prefix",
            "module.vpc_ecs.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-175925749",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a6c0b365cf573c3b",
            "security_group_rule_id": "sgr-05385b81e823fd704",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_sg_group.aws_security_group.this",
            "module.lb_sg_group.aws_security_group.this_name_prefix",
            "module.vpc_ecs.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.secretsmanager_endpoint",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:vpc-endpoint/vpce-0b78f63d1b89510f6",
            "dns_entry": [
              {
                "dns_name": "vpce-0b78f63d1b89510f6-xxf013an.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b78f63d1b89510f6-xxf013an-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02924541WSLT93C8L0X9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b78f63d1b89510f6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0f6c8d5aa818684df"
            ],
            "owner_id": "058264066970",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-005aadcf97f0a7b97"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.101",
                "subnet_id": "subnet-0d34ecef1bbb6b43e"
              }
            ],
            "subnet_ids": [
              "subnet-0d34ecef1bbb6b43e"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "dependencies": [
            "data.aws_region.current",
            "module.endpoint_sg.aws_security_group.this",
            "module.endpoint_sg.aws_security_group.this_name_prefix",
            "module.vpc_ecs.aws_subnet.private",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vm_docker_build",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01f5a0b78d6089704",
            "arn": "arn:aws:ec2:us-east-1:058264066970:instance/i-053da4564d0f00f9d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-instance-profile",
            "id": "i-053da4564d0f00f9d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b4516ee58731efc3",
            "private_dns": "ip-10-0-1-12.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-030ef2bb01cd960a9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d34ecef1bbb6b43e",
            "tags": {
              "Name": "ec2_linux_docker_build"
            },
            "tags_all": {
              "Name": "ec2_linux_docker_build"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "ec2_linux_docker_build"
            },
            "vpc_security_group_ids": [
              "sg-029fc013d93a6771a"
            ]
          },
          "dependencies": [
            "aws_ecr_repository.ecr_word_press",
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2_role",
            "data.aws_ami.amazon_linux",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "module.docker_ec2_sg.aws_security_group.this",
            "module.docker_ec2_sg.aws_security_group.this_name_prefix",
            "module.vm_docker_build.aws_iam_instance_profile.this",
            "module.vm_docker_build.aws_iam_role.this",
            "module.vm_docker_build.data.aws_iam_policy_document.assume_role_policy",
            "module.vm_docker_build.data.aws_partition.current",
            "module.vm_docker_build.data.aws_ssm_parameter.this",
            "module.vpc_ecs.aws_subnet.private",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ecs",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:network-acl/acl-03d8e720123540ce5",
            "default_network_acl_id": "acl-03d8e720123540ce5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03d8e720123540ce5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "058264066970",
            "subnet_ids": [
              "subnet-03d7b95760001bd65",
              "subnet-0a3b3e99ff3bef98e",
              "subnet-0c16da83a354be914",
              "subnet-0d34ecef1bbb6b43e",
              "subnet-0d8f78d44b205c46e",
              "subnet-0e5632003d78e44ad"
            ],
            "tags": {
              "Name": "ecs-vpc-default"
            },
            "tags_all": {
              "Name": "ecs-vpc-default"
            },
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ecs.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ecs",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:route-table/rtb-072ad968e67224f04",
            "default_route_table_id": "rtb-072ad968e67224f04",
            "id": "rtb-072ad968e67224f04",
            "owner_id": "058264066970",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ecs-vpc-default"
            },
            "tags_all": {
              "Name": "ecs-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ecs.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ecs",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:security-group/sg-066ac245a0bc10e60",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-066ac245a0bc10e60",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "058264066970",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-vpc-default"
            },
            "tags_all": {
              "Name": "ecs-vpc-default"
            },
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ecs.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ecs",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1167c7d85b2d2ad",
            "arn": "arn:aws:ec2:us-east-1:058264066970:elastic-ip/eipalloc-0e1167c7d85b2d2ad",
            "association_id": "eipassoc-0f97d69bd734c8007",
            "domain": "vpc",
            "id": "eipalloc-0e1167c7d85b2d2ad",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0335d847f2e98076f",
            "private_dns": "ip-10-0-101-29.ec2.internal",
            "private_ip": "10.0.101.29",
            "public_dns": "ec2-44-219-202-69.compute-1.amazonaws.com",
            "public_ip": "44.219.202.69",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ecs-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "ecs-vpc-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc_ecs.aws_internet_gateway.this",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-007a4982d18d1a21b",
            "arn": "arn:aws:ec2:us-east-1:058264066970:elastic-ip/eipalloc-007a4982d18d1a21b",
            "association_id": "eipassoc-08198e2e8a58ef4d0",
            "domain": "vpc",
            "id": "eipalloc-007a4982d18d1a21b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0dce79fb461c46714",
            "private_dns": "ip-10-0-102-131.ec2.internal",
            "private_ip": "10.0.102.131",
            "public_dns": "ec2-52-5-146-50.compute-1.amazonaws.com",
            "public_ip": "52.5.146.50",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ecs-vpc-us-east-1b"
            },
            "tags_all": {
              "Name": "ecs-vpc-us-east-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc_ecs.aws_internet_gateway.this",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b61fc50ece3c056",
            "arn": "arn:aws:ec2:us-east-1:058264066970:elastic-ip/eipalloc-02b61fc50ece3c056",
            "association_id": "eipassoc-0365898a26406b256",
            "domain": "vpc",
            "id": "eipalloc-02b61fc50ece3c056",
            "network_border_group": "us-east-1",
            "network_interface": "eni-069224a38b4872305",
            "private_dns": "ip-10-0-103-138.ec2.internal",
            "private_ip": "10.0.103.138",
            "public_dns": "ec2-54-156-46-64.compute-1.amazonaws.com",
            "public_ip": "54.156.46.64",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ecs-vpc-us-east-1c"
            },
            "tags_all": {
              "Name": "ecs-vpc-us-east-1c"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc_ecs.aws_internet_gateway.this",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ecs",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:internet-gateway/igw-0b57af4d4370de5e4",
            "id": "igw-0b57af4d4370de5e4",
            "owner_id": "058264066970",
            "tags": {
              "Name": "ecs-vpc"
            },
            "tags_all": {
              "Name": "ecs-vpc"
            },
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "dependencies": [
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ecs",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1167c7d85b2d2ad",
            "association_id": "eipassoc-0f97d69bd734c8007",
            "connectivity_type": "public",
            "id": "nat-06e77744af80af3a6",
            "network_interface_id": "eni-0335d847f2e98076f",
            "private_ip": "10.0.101.29",
            "public_ip": "44.219.202.69",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a3b3e99ff3bef98e",
            "tags": {
              "Name": "ecs-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "ecs-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc_ecs.aws_eip.nat",
            "module.vpc_ecs.aws_internet_gateway.this",
            "module.vpc_ecs.aws_subnet.public",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-007a4982d18d1a21b",
            "association_id": "eipassoc-08198e2e8a58ef4d0",
            "connectivity_type": "public",
            "id": "nat-0958c7be5ef5fa874",
            "network_interface_id": "eni-0dce79fb461c46714",
            "private_ip": "10.0.102.131",
            "public_ip": "52.5.146.50",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e5632003d78e44ad",
            "tags": {
              "Name": "ecs-vpc-us-east-1b"
            },
            "tags_all": {
              "Name": "ecs-vpc-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc_ecs.aws_eip.nat",
            "module.vpc_ecs.aws_internet_gateway.this",
            "module.vpc_ecs.aws_subnet.public",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b61fc50ece3c056",
            "association_id": "eipassoc-0365898a26406b256",
            "connectivity_type": "public",
            "id": "nat-086c12036044b18a7",
            "network_interface_id": "eni-069224a38b4872305",
            "private_ip": "10.0.103.138",
            "public_ip": "54.156.46.64",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d8f78d44b205c46e",
            "tags": {
              "Name": "ecs-vpc-us-east-1c"
            },
            "tags_all": {
              "Name": "ecs-vpc-us-east-1c"
            }
          },
          "dependencies": [
            "module.vpc_ecs.aws_eip.nat",
            "module.vpc_ecs.aws_internet_gateway.this",
            "module.vpc_ecs.aws_subnet.public",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ecs",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f3b85a6efad0d70f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06e77744af80af3a6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f3b85a6efad0d70f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ecs.aws_eip.nat",
            "module.vpc_ecs.aws_internet_gateway.this",
            "module.vpc_ecs.aws_nat_gateway.this",
            "module.vpc_ecs.aws_route_table.private",
            "module.vpc_ecs.aws_subnet.public",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f4b4b6c671092ac01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0958c7be5ef5fa874",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f4b4b6c671092ac0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ecs.aws_eip.nat",
            "module.vpc_ecs.aws_internet_gateway.this",
            "module.vpc_ecs.aws_nat_gateway.this",
            "module.vpc_ecs.aws_route_table.private",
            "module.vpc_ecs.aws_subnet.public",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01bf0cfb8edb389e81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-086c12036044b18a7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01bf0cfb8edb389e8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ecs.aws_eip.nat",
            "module.vpc_ecs.aws_internet_gateway.this",
            "module.vpc_ecs.aws_nat_gateway.this",
            "module.vpc_ecs.aws_route_table.private",
            "module.vpc_ecs.aws_subnet.public",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ecs",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b57af4d4370de5e4",
            "id": "r-rtb-0a806265898dd2ef91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a806265898dd2ef9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ecs.aws_internet_gateway.this",
            "module.vpc_ecs.aws_route_table.public",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ecs",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:route-table/rtb-0f3b85a6efad0d70f",
            "id": "rtb-0f3b85a6efad0d70f",
            "owner_id": "058264066970",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e77744af80af3a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "ecs-vpc-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:route-table/rtb-0f4b4b6c671092ac0",
            "id": "rtb-0f4b4b6c671092ac0",
            "owner_id": "058264066970",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0958c7be5ef5fa874",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "ecs-vpc-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:route-table/rtb-01bf0cfb8edb389e8",
            "id": "rtb-01bf0cfb8edb389e8",
            "owner_id": "058264066970",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-086c12036044b18a7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "ecs-vpc-private-us-east-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ecs",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:route-table/rtb-0a806265898dd2ef9",
            "id": "rtb-0a806265898dd2ef9",
            "owner_id": "058264066970",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b57af4d4370de5e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-vpc-public"
            },
            "tags_all": {
              "Name": "ecs-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ecs",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b36d35a8e8abe025",
            "route_table_id": "rtb-0f3b85a6efad0d70f",
            "subnet_id": "subnet-0d34ecef1bbb6b43e"
          },
          "dependencies": [
            "module.vpc_ecs.aws_route_table.private",
            "module.vpc_ecs.aws_subnet.private",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051891028bf3b5c4e",
            "route_table_id": "rtb-0f4b4b6c671092ac0",
            "subnet_id": "subnet-03d7b95760001bd65"
          },
          "dependencies": [
            "module.vpc_ecs.aws_route_table.private",
            "module.vpc_ecs.aws_subnet.private",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9709331b148edd3",
            "route_table_id": "rtb-01bf0cfb8edb389e8",
            "subnet_id": "subnet-0c16da83a354be914"
          },
          "dependencies": [
            "module.vpc_ecs.aws_route_table.private",
            "module.vpc_ecs.aws_subnet.private",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ecs",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddc7ac63a8770fae",
            "route_table_id": "rtb-0a806265898dd2ef9",
            "subnet_id": "subnet-0a3b3e99ff3bef98e"
          },
          "dependencies": [
            "module.vpc_ecs.aws_route_table.public",
            "module.vpc_ecs.aws_subnet.public",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09655f0a2fa49a206",
            "route_table_id": "rtb-0a806265898dd2ef9",
            "subnet_id": "subnet-0e5632003d78e44ad"
          },
          "dependencies": [
            "module.vpc_ecs.aws_route_table.public",
            "module.vpc_ecs.aws_subnet.public",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1622d44be7ee538",
            "route_table_id": "rtb-0a806265898dd2ef9",
            "subnet_id": "subnet-0d8f78d44b205c46e"
          },
          "dependencies": [
            "module.vpc_ecs.aws_route_table.public",
            "module.vpc_ecs.aws_subnet.public",
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ecs",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:subnet/subnet-0d34ecef1bbb6b43e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d34ecef1bbb6b43e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264066970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "ecs-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "dependencies": [
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:subnet/subnet-03d7b95760001bd65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d7b95760001bd65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264066970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "ecs-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "dependencies": [
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:subnet/subnet-0c16da83a354be914",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c16da83a354be914",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264066970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-vpc-private-us-east-1c"
            },
            "tags_all": {
              "Name": "ecs-vpc-private-us-east-1c"
            },
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "dependencies": [
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ecs",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:subnet/subnet-0a3b3e99ff3bef98e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3b3e99ff3bef98e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264066970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "ecs-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "dependencies": [
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:subnet/subnet-0e5632003d78e44ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5632003d78e44ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264066970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "ecs-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "dependencies": [
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:subnet/subnet-0d8f78d44b205c46e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8f78d44b205c46e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264066970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-vpc-public-us-east-1c"
            },
            "tags_all": {
              "Name": "ecs-vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-0cf9541fd9ba45838"
          },
          "dependencies": [
            "module.vpc_ecs.aws_vpc.this",
            "module.vpc_ecs.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ecs",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264066970:vpc/vpc-0cf9541fd9ba45838",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03d8e720123540ce5",
            "default_route_table_id": "rtb-072ad968e67224f04",
            "default_security_group_id": "sg-066ac245a0bc10e60",
            "dhcp_options_id": "dopt-0fee1cb87aa15ea94",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cf9541fd9ba45838",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-072ad968e67224f04",
            "owner_id": "058264066970",
            "tags": {
              "Name": "ecs-vpc"
            },
            "tags_all": {
              "Name": "ecs-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}